--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,12 +1,15 @@
 security:
     encoders:
-        App\Entity\User:
+        Symfony\Component\Security\Core\User\User:
             algorithm: bcrypt
+            cost: 12
     providers:
-        doctrine_mysql:
-            entity:
-                class: App\Entity\User
-                property: username
+        in_memory:
+            memory:
+                users:
+                    admin:
+                        password: '%env(resolve:ADMIN_PASSWORD)%'
+                        roles: 'ROLE_ADMIN'
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
