--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,6 +2,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    vignette_upload_directory: '%kernel.project_dir%/public/uploads/articles'
 
 services:
     # default configuration for services in *this* file
