--- a/.env.dist
+++ b/.env.dist
@@ -1,17 +1,12 @@
-# This file is a "template" of which env vars need to be defined for your application
-# Copy this file to .env file for development, create environment variables when deploying to production
-# https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
-
-###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=af0e5785708f1669728212e1819d10fe
-#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
-#TRUSTED_HOSTS=localhost,example.com
-###< symfony/framework-bundle ###
 
-###> doctrine/doctrine-bundle ###
-# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
-# Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
-###< doctrine/doctrine-bundle ###
+# Password for the in-memory administrator
+ADMIN_PASSWORD=password
+
+# Database acceess
+DATABASE_URL=pgsql://user:password@huberisation_db:5432/huberisation
+POSTGRES_PASSWORD=password
+POSTGRES_USER=user
+
+BACKEND_URL=blog.huberisation.eu
