chore: refactor app security

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,15 +1,14 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User:
-            algorithm: bcrypt
-            cost: 12
+        App\Entity\User:
+            algorithm: argon2i
+
     providers:
-        in_memory:
-            memory:
-                users:
-                    admin:
-                        password: '%env(resolve:ADMIN_PASSWORD)%'
-                        roles: 'ROLE_ADMIN'
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -19,5 +18,8 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
