--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/yaml": "^4.2"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/dotenv": "^4.2",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "^1.0"
