--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,8 @@ services:
     restart: always
     volumes:
       - app:/var/www/app
-    ports:
-      - 8080:80
+    expose:
+      - "80"
     depends_on:
       - app
     links:
